# artigen

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/artigen/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/shaejaz/artigen/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/artigen/: JNICallback.kt  MainActivity.kt  RenderView.kt  RustBridge.kt
app/src/main/java/com/example/artigen/image/: ImageViewModel.kt
app/src/main/java/com/shaejaz/artigen/: ArtigenApplication.kt  MainActivity.kt  RenderView.kt
app/src/main/java/com/shaejaz/artigen/bottompanel/: BottomPanel.kt  BottomPanelViewModel.kt  EditPattern.kt
app/src/main/java/com/shaejaz/artigen/data/: BlocksConfig.kt  Config.kt  JuliaConfig.kt  PaintedConfig.kt  Pattern.kt
app/src/main/res/drawable/: ic_baseline_wallpaper_24.xml
app/src/main/res/layout/: activity_main.xml  dropdown_item.xml  frag_blocks_config.xml  frag_bottom_panel.xml  frag_edit_pattern.xml  frag_julia_config.xml  frag_painted_config.xml  frag_pattern_config_container.xml  frag_top_panel.xml  fragment_bottom_panel.xml  fragment_painted_config_options.xml  fragment_pattern_config.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/artigen/: ExampleUnitTest.kt
app/src/test/java/com/shaejaz/artigen/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: Cargo.toml
lib/src/: lib.rs
(+22 files in other folders)
