[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = "0.20.0"
rand = "0.8"

[lib]
path = "src/lib.rs"
name = "artigen_android"
crate-type = ["dylib"]